[package]
name = "actix_app"
version = "0.1.0"
authors = ["Eduardo Cabrera Japa <dvex_92@hotmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["Parse", "Markdown"]
description = "Read markdown from file and return it as HTML"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
clap = "2.33.0"
pulldown-cmark = "0.7.0"
maud = "0.21.0"
regex = "1.3.6"
dotenv = "0.15.0"
failure = "0.1.7"
diesel = {version = "1.4.4", features = ["postgres", "numeric"]}
bigdecimal = "0.1.0"