[package]
name = "actix_app"
version = "0.1.0"
authors = ["Eduardo Cabrera Japa <dvex_92@hotmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["Parse", "Markdown"]
description = "Read markdown from file and return it as HTML"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [[bin]]
# name = "sale_cli"
# path = "src/cli.rs"

[lib]
name = "db_middleware"
path = "src/lib.rs"

[dependencies]
# rand = "0.7.3"
# clap = "2.33.0"
# pulldown-cmark = "0.7.0"
# maud = "0.21.0"
regex = "1.3.6"
dotenv = "0.15.0"
failure = "0.1.7"
chrono = { version = "0.4", features = ["serde"] }
diesel = {version = "1.4.4", features = ["postgres", "numeric"]}
diesel_cli_ext = "0.3.5"
bigdecimal = "0.1.0"