[package]
name = "db_middleware"
version = "0.1.0"
authors = ["Eduardo Cabrera Japa <dvex_92@hotmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["DB", "Sale", "API"]
description = "Make a connection to database"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [[bin]]
# name = "sale_cli"
# path = "src/cli.rs"

[lib]
name = "db_middleware"
path = "src/lib.rs"

[dependencies]
regex = "1.3.6"
dotenv = "0.15.0"
failure = "0.1.7"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres", "numeric", "chrono"] }
diesel_cli_ext = "0.3.5"
bigdecimal = { version = "0.1.0", features = ["serde"]}
serde = { version = "1.0.106", features = ["derive"] }
serde_derive = "1.0.106"
serde_json = "1.0"
bson = "0.1.3"
mongodb = "0.1.0"